# SolaShare

./: package-lock.json  package.json
program/: Cargo.toml
program/src/: lib.rs
src/app/: layout.tsx  page.tsx
src/components/ui/: button.tsx  card.tsx
src/contract/: postContract.ts  solanaContract.ts
src/features/feed/components/: Feed.tsx
src/features/wallet/: WalletProvider.tsx
