[package]
name = "solashare-program"
version = "0.1.0"
edition = "2021"
description = "Solana program for SolaShare social platform"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.17.0"
borsh = "0.10.3"
thiserror = "1.0.49"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"

[features]
no-entrypoint = []
test-sbf = []
